force-app/main/default/objects/Opportunity/fields/Acceptance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acceptance Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>