force-app/main/default/objects/Opportunity/fields/Account_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Email__c</fullName>
    <formula>Account.Contact_Person__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>