force-app/main/default/objects/Opportunity/fields/Account_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person__c</fullName>
    <formula>Account.Contact_Person__r.FirstName + &apos; &apos; + Account.Contact_Person__r.LastName</formula>
    <inlineHelpText>The main contact person for the account</inlineHelpText>
    <label>Contact Person</label>
    <type>Text</type>
</CustomField>