force-app/main/default/objects/Opportunity/fields/Account_Contact_Person_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_First_Name__c</fullName>
    <formula>Account.Contact_Person__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person First Name</label>
    <type>Text</type>
</CustomField>