force-app/main/default/objects/Opportunity/fields/Account_Contact_Person_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Last_Name__c</fullName>
    <formula>Account.Contact_Person__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Person Last Name</label>
    <type>Text</type>
</CustomField>