force-app/main/default/objects/Opportunity/fields/Account_Contact_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Phone__c</fullName>
    <formula>Account.Contact_Person__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person Phone</label>
    <type>Text</type>
</CustomField>