force-app/main/default/objects/Opportunity/fields/Account_Management_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for H&amp;B AMR</description>
    <label>H&amp;B Account Management Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>