force-app/main/default/objects/Opportunity/fields/Admitted__c.field-meta.xml
<CustomField>
    <fullName>Admitted__c</fullName>
    <inlineHelpText>Is the quote Admitted?</inlineHelpText>
    <label>Admitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>