force-app/main/default/objects/Opportunity/fields/AE_Commission__c.field-meta.xml
<CustomField>
    <fullName>AE_Commission__c</fullName>
    <formula>Total_Revenue__c * (3/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>