force-app/main/default/objects/Opportunity/fields/Affinity_Opp__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box is used to mark all opportunities submitted via the Affinity Partners portal for performance tracking and the payment of fees &amp; commissions.</description>
    <inlineHelpText>Check this box to mark opportunities sourced from Affinity Partners</inlineHelpText>
    <label>Affinity Opp</label>
    <type>Checkbox</type>
</CustomField>