force-app/main/default/objects/Opportunity/fields/Aggregrate_Limit__c.field-meta.xml
<CustomField>
    <fullName>Aggregrate_Limit__c</fullName>
    <label>Aggregrate Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>