force-app/main/default/objects/Opportunity/fields/AI_Address__c.field-meta.xml
<CustomField>
    <fullName>AI_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AI Address</label>
    <type>TextArea</type>
</CustomField>