force-app/main/default/objects/Opportunity/fields/AI_Name__c.field-meta.xml
<CustomField>
    <fullName>AI_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AI Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>