force-app/main/default/objects/Opportunity/fields/AI_Needed__c.field-meta.xml
<CustomField>
    <fullName>AI_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Needed?</label>
    <type>Checkbox</type>
</CustomField>