force-app/main/default/objects/Opportunity/fields/AI_Relationship_to_Insured__c.field-meta.xml
<CustomField>
    <fullName>AI_Relationship_to_Insured__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AI Relationship to Insured</label>
    <type>TextArea</type>
</CustomField>