force-app/main/default/objects/Opportunity/fields/All_Traffic_Sources__c.field-meta.xml
<CustomField>
    <fullName>All_Traffic_Sources__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Traffic Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>