force-app/main/default/objects/Opportunity/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amenities</label>
    <type>TextArea</type>
</CustomField>