force-app/main/default/objects/Opportunity/fields/AMR_Name__c.field-meta.xml
<CustomField>
    <fullName>AMR_Name__c</fullName>
    <formula>Account.Account_Management_Rep__r.FirstName + &quot; &quot; + Account.Account_Management_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMR Name</label>
    <type>Text</type>
</CustomField>