force-app/main/default/objects/Opportunity/fields/AR_Warning_Expiring_Premium__c.field-meta.xml
<CustomField>
    <fullName>AR_Warning_Expiring_Premium__c</fullName>
    <description>Used for PopUp on AR Lightning App Page to warn about Expiring Premium</description>
    <formula>AND( 
 ISPICKVAL(Policy_Type_Status__c , &apos;New Business&apos;),   
 ISPICKVAL(StageName , &apos;Need to Submit&apos;),
 RecordTypeId = &apos;01237000000Xu4C&apos;,
 ISBLANK( Expiring_Premium__c )
)</formula>
    <label>AR_Warning_Expiring_Premium</label>
    <type>Checkbox</type>
</CustomField>