force-app/main/default/objects/Opportunity/fields/Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Date__c</fullName>
    <description>Opportunity owner updated to any underwriter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignment Date</label>
    <type>DateTime</type>
</CustomField>