force-app/main/default/objects/Opportunity/fields/Authority_Level__c.field-meta.xml
<CustomField>
    <fullName>Authority_Level__c</fullName>
    <description>A picklist of values for opportunity level.</description>
    <label>Authority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>