force-app/main/default/objects/Opportunity/fields/Auto_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A field that states whether an opportunity was auto assigned by a specific salesforce flow.</description>
    <label>Auto Assigned?</label>
    <type>Checkbox</type>
</CustomField>