force-app/main/default/objects/Opportunity/fields/Automatic_Reachout__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Reachout__c</fullName>
    <formula>Account.Automatic_Reachout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatic Reachout</label>
    <type>Checkbox</type>
</CustomField>