force-app/main/default/objects/Opportunity/fields/Bind_Date__c.field-meta.xml
<CustomField>
    <fullName>Bind_Date__c</fullName>
    <description>Stage updated to Proposal Approved/Closed Won</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bind Date</label>
    <type>DateTime</type>
</CustomField>