force-app/main/default/objects/Opportunity/fields/Bind_Request__c.field-meta.xml
<CustomField>
    <fullName>Bind_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bind Request</label>
    <type>Checkbox</type>
</CustomField>