force-app/main/default/objects/Opportunity/fields/Binder_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>Binder_Year_Formula__c</fullName>
    <description>A formula field that takes the Carrier and the effective date to calculate what the correct binder year is.</description>
    <formula>IF(
    AND(
        CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Lloyd&quot;),
        Effective_Date__c &gt;= DATE(2018, 1, 1),
        Effective_Date__c &lt;= DATE(2020, 3, 31)
    ), &quot;BY1&quot;, 
    IF(
        AND(
            CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Lloyd&quot;),
            Effective_Date__c &gt;= DATE(2020, 4, 1),
            Effective_Date__c &lt;= DATE(2021, 1, 31)
        ), &quot;BY2&quot;, 
        IF(
            AND(
                CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Lloyd&quot;),
                Effective_Date__c &gt;= DATE(2021, 2, 1),
                Effective_Date__c &lt;= DATE(2021, 12, 31)
            ), &quot;BY3&quot;, 
            IF(
                AND(
                    CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Lloyd&quot;),
                    Effective_Date__c &gt;= DATE(2022, 1, 1),
                    Effective_Date__c &lt;= DATE(2023, 3, 31)
                ), &quot;BY4&quot;, 
                IF(
                    AND(
                        CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Lloyd&quot;),
                        Effective_Date__c &gt;= DATE(2023, 4, 1),
                        Effective_Date__c &lt;= DATE(2024, 3, 31)
                    ), &quot;BY5&quot;, 
                    IF(
                        AND(
                            CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Lloyd&quot;),
                            Effective_Date__c &gt;= DATE(2024, 4, 1),
                            Effective_Date__c &lt;= DATE(2025, 3, 31)
                        ), &quot;BY6&quot;, 
                        IF(
                            AND(
                                OR(
                                    CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Trisura&quot;),
                                    CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Bricktown&quot;)
                                ),
                                Effective_Date__c &gt;= DATE(2022, 5, 1),
                                Effective_Date__c &lt;= DATE(2023, 4, 30)
                            ), &quot;BY1&quot;, 
                            IF(
                                AND(
                                    OR(
                                        CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Trisura&quot;),
                                        CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Bricktown&quot;)
                                    ),
                                    Effective_Date__c &gt;= DATE(2023, 5, 1),
                                    Effective_Date__c &lt;= DATE(2024, 4, 30)
                                ), &quot;BY2&quot;, 
                                IF(
                                    AND(
                                        OR(
                                            CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Trisura&quot;),
                                            CONTAINS(Carrier_Issuing_Company__r.Name, &quot;Bricktown&quot;)
                                        ),
                                        Effective_Date__c &gt;= DATE(2024, 5, 1),
                                        Effective_Date__c &lt;= DATE(2025, 4, 30)
                                    ), &quot;BY3&quot;, 
                                    &quot;NA&quot;
                                )
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Binder Year (Formula)</label>
    <type>Text</type>
</CustomField>