force-app/main/default/objects/Opportunity/fields/Broking_Grade__c.field-meta.xml
<CustomField>
    <fullName>Broking_Grade__c</fullName>
    <description>Do not use anymire</description>
    <label>New Business Broking Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Quote - NB</fullName>
                <label>Good Quote</label>
            </value>
            <value>
                <fullName>Standard Quote - NB</fullName>
                <label>Standard Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>