force-app/main/default/objects/Opportunity/fields/BRP_Historical_Data__c.field-meta.xml
<CustomField>
    <fullName>BRP_Historical_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRP Historical Data</label>
    <type>Checkbox</type>
</CustomField>