force-app/main/default/objects/Opportunity/fields/BRP_Historical_Data_Notes__c.field-meta.xml
<CustomField>
    <fullName>BRP_Historical_Data_Notes__c</fullName>
    <description>BRP Historical Data Notes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BRP Historical Data Notes</label>
    <type>TextArea</type>
</CustomField>