force-app/main/default/objects/Opportunity/fields/BRP_Upload_Batch__c.field-meta.xml
<CustomField>
    <fullName>BRP_Upload_Batch__c</fullName>
    <formula>CASE(
    Account.BRP_Data_Source__c,
    &quot;BKS&quot;, &quot;BKS Upload 12/2023&quot;,
    &quot;AHT - RP&quot;, &quot;AHT RP Upload 4/2024&quot;,
    &quot;Mason &amp; Mason&quot;, &quot;Mason &amp; Mason 6/2024&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRP Upload Batch</label>
    <type>Text</type>
</CustomField>