force-app/main/default/objects/Opportunity/fields/BRP_VR_Override__c.field-meta.xml
<CustomField>
    <fullName>BRP_VR_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overrides the VR that doesn&apos;t let users update BRP historical data.</description>
    <label>BRP VR Override</label>
    <type>Checkbox</type>
</CustomField>