force-app/main/default/objects/Opportunity/fields/Building_Value__c.field-meta.xml
<CustomField>
    <fullName>Building_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Value</label>
    <type>TextArea</type>
</CustomField>