force-app/main/default/objects/Opportunity/fields/Bypass_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To bypass code</description>
    <label>Bypass_Renewal</label>
    <type>Checkbox</type>
</CustomField>