force-app/main/default/objects/Opportunity/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>Admiral</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>AIX Burlington</fullName>
            </value>
            <value>
                <fullName>AIX Specialty Insurance Company</fullName>
            </value>
            <value>
                <fullName>Allied World</fullName>
            </value>
            <value>
                <fullName>Amtrust</fullName>
            </value>
            <value>
                <fullName>Arch</fullName>
            </value>
            <value>
                <fullName>Argo</fullName>
            </value>
            <value>
                <fullName>Argonaut</fullName>
            </value>
            <value>
                <fullName>Ascent</fullName>
            </value>
            <value>
                <fullName>Atain Specialty</fullName>
            </value>
            <value>
                <fullName>AXIS Insurance</fullName>
            </value>
            <value>
                <fullName>Barbican</fullName>
            </value>
            <value>
                <fullName>Beazley</fullName>
            </value>
            <value>
                <fullName>Catlin Specialty</fullName>
            </value>
            <value>
                <fullName>CFC Underwriting</fullName>
            </value>
            <value>
                <fullName>CFC Underwriting, Lloyds of London</fullName>
            </value>
            <value>
                <fullName>Chubb</fullName>
            </value>
            <value>
                <fullName>Columbia Casualty Company</fullName>
            </value>
            <value>
                <fullName>Covington Specialty</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>Endurance</fullName>
            </value>
            <value>
                <fullName>Erisk</fullName>
            </value>
            <value>
                <fullName>Erisk / Scottsdale Insurance Company</fullName>
            </value>
            <value>
                <fullName>Essex Insurance Company</fullName>
            </value>
            <value>
                <fullName>Euclid</fullName>
            </value>
            <value>
                <fullName>Evanston Insurance Company</fullName>
            </value>
            <value>
                <fullName>First Rehab</fullName>
            </value>
            <value>
                <fullName>Gemini</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>