force-app/main/default/objects/Opportunity/fields/Carrier_Issuing_Company__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Issuing paper of the carrier that underwrites the policy.</description>
    <label>Carrier Issuing Company</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Issuing Company</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Scale Issuing Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Carrier Issuing Company)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>