force-app/main/default/objects/Opportunity/fields/Carrier_Issuing_Company_Medical__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company_Medical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Issuing Company Medical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>