force-app/main/default/objects/Opportunity/fields/Cash_from_ops__c.field-meta.xml
<CustomField>
    <fullName>Cash_from_ops__c</fullName>
    <description>Scale record type</description>
    <label>Cash from ops (TTM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>