force-app/main/default/objects/Opportunity/fields/Census_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Census_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Census Uploaded</label>
    <type>Checkbox</type>
</CustomField>