force-app/main/default/objects/Opportunity/fields/Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Date__c</fullName>
    <description>Stage Updated to Need to Submit</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clearance Date</label>
    <type>DateTime</type>
</CustomField>