force-app/main/default/objects/Opportunity/fields/Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Won Date</label>
    <type>DateTime</type>
</CustomField>