force-app/main/default/objects/Opportunity/fields/Commercial_Space__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Space__c</fullName>
    <description>is the location for commercial use</description>
    <label>Commercial Space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>moka</fullName>
                <isActive>false</isActive>
                <label>moka</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>