force-app/main/default/objects/Opportunity/fields/Confirmation_of_Surplus_Lines_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_Surplus_Lines_Licensing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation of Surplus Lines Licensing</label>
    <type>Checkbox</type>
</CustomField>