force-app/main/default/objects/Opportunity/fields/Construction_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Construction Date</label>
    <type>Date</type>
</CustomField>