force-app/main/default/objects/Opportunity/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <label>Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joiested Masonry</fullName>
            </value>
            <value>
                <fullName>Masonry Non-Combustible</fullName>
            </value>
            <value>
                <fullName>Modified Fire Resistive</fullName>
            </value>
            <value>
                <fullName>Fire Resistive</fullName>
            </value>
            <value>
                <fullName>Frame</fullName>
            </value>
            <value>
                <fullName>Joisted Masonry</fullName>
            </value>
            <value>
                <fullName>Modified Fire-Resistive</fullName>
                <isActive>false</isActive>
                <label>Modified Fire-Resistive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>