force-app/main/default/objects/Opportunity/fields/Construction_Year__c.field-meta.xml
<CustomField>
    <fullName>Construction_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Construction Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>