force-app/main/default/objects/Opportunity/fields/Contractual_agreement_in_place_CFI__c.field-meta.xml
<CustomField>
    <fullName>Contractual_agreement_in_place_CFI__c</fullName>
    <description>Used for CFI, a contractual agreement must be in place to write coverage.</description>
    <label>Contractual agreement in place? (CFI)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>