force-app/main/default/objects/Opportunity/fields/Contractual_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contractual Requirements</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>