force-app/main/default/objects/Opportunity/fields/ConvertedLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConvertedLead</label>
    <type>Checkbox</type>
</CustomField>