force-app/main/default/objects/Opportunity/fields/Coverage_Groups__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Groups__c</fullName>
    <description>(Field Name)  Coverage Groups. (Purpose of Field)  Contains the coverage groups associated with the account. (Used in Record Types)  N/A. (Used in Layouts)  N/A. (Visible to)  N/A. (Shows up in reports)  N/A.</description>
    <formula>IF( OR( INCLUDES(Coverage_s_OLD__c,&apos;Directors &amp; Officers&apos;) , INCLUDES(Coverage_s_OLD__c,&apos;Employment Practices Liability Insurance&apos;)) , &apos;Management Liability&apos;,  IF( OR( INCLUDES(Coverage_s_OLD__c, &apos;Inland Marine&apos;) , INCLUDES(Coverage_s_OLD__c, &apos;Ocean Cargo&apos;) , INCLUDES(Coverage_s_OLD__c, &apos;Property&apos;) , INCLUDES(Coverage_s_OLD__c, &quot;Builders Risk&quot;), INCLUDES(Coverage_s_OLD__c, &quot;Truck Cargo&quot;)  ) , &quot;Property&quot;, IF( INCLUDES(Coverage_s_OLD__c, &quot;Disability&quot;) , &quot;Disability&quot;,  IF( INCLUDES(Coverage_s_OLD__c, &quot;Key Man&quot;) , &quot;Key Man&quot;,IF( INCLUDES(Coverage_s_OLD__c, &quot;Contract Frustration Insurance&quot;) , &quot;Contract Frustration Insurance&quot;, IF( OR( AND( INCLUDES(Coverage_s_OLD__c, &quot;General Liability&quot;) ,OR( INCLUDES(Coverage_s_OLD__c, &quot;Errors &amp; Omissions&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Cyber Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Media Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Privacy&quot;), INCLUDES(Coverage_s_OLD__c, &quot;Cyber Crime (BTC)&quot;),  INCLUDES(Coverage_s_OLD__c, &quot;Legal Liability&quot;))) , AND( INCLUDES(Coverage_s_OLD__c, &quot;Business Owners Policy&quot;) ,OR( INCLUDES(Coverage_s_OLD__c, &quot;Errors &amp; Omissions&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Cyber Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Media Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Privacy&quot;), INCLUDES(Coverage_s_OLD__c, &quot;Cyber Crime (BTC)&quot;),  INCLUDES(Coverage_s_OLD__c, &quot;Legal Liability&quot;))) ) ,&quot;Commercial &amp; Professional Package&quot;, IF( INCLUDES(Coverage_s_OLD__c, &quot;Crime&quot;) , &quot;Crime&quot;,  IF(  OR( INCLUDES(Coverage_s_OLD__c, &quot;ERISA Bond&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Crime Bond&quot;) ) , &quot;Bonds&quot;, IF( OR( INCLUDES(Coverage_s_OLD__c, &quot;Errors &amp; Omissions&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Cyber Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Media Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Privacy&quot;), INCLUDES(Coverage_s_OLD__c, &quot;Cyber Crime (BTC)&quot;),  INCLUDES(Coverage_s_OLD__c, &quot;Legal Liability&quot;) ) , &quot;Professional Liability&quot;, IF( OR( INCLUDES(Coverage_s_OLD__c, &quot;Business Owners Policy&quot;) , AND( INCLUDES(Coverage_s_OLD__c, &quot;Umbrella&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Business Owners Policy&quot;) )) , &quot;Property &amp; Casualty Package&quot;, IF( OR( INCLUDES(Coverage_s_OLD__c, &quot;General Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Products Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Liquor Liability&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Special Events&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Workers Compensation&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Kidnap &amp; Ransom&quot;) , INCLUDES(Coverage_s_OLD__c, &quot;Umbrella&quot;), INCLUDES(Coverage_s_OLD__c, &quot;Commercial Auto&quot;), INCLUDES(Coverage_s_OLD__c, &quot;Event General Liability&quot;)   ) , &quot;Casualty&quot;, &quot;None&quot;) ) ) ) ) ) ) ) ) ) )</formula>
    <label>Coverage_Groups</label>
    <type>Text</type>
</CustomField>